test staticrypt workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,7 +22,7 @@ jobs:
 
       - run: npm i -g staticrypt
 
-      - run: find ./_site -type f -name "*.html" -exec staticrypt {} MY_PASSWORD 
+      - run: staticrypt ./_site/index.html -p MY_PASSWORD 
 
       - name: Publish to GitHub Pages (and render)
         uses: quarto-dev/quarto-actions/publish@v2
