test staticrypt workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,7 +28,7 @@ jobs:
         run: sudo npm install -g staticrypt
       
       - name: Encrypt index
-        run: staticrypt index.html -p MY_LONG_PASSWORD -o index.html
+        run: staticrypt _site/index.html -p MY_LONG_PASSWORD -o index.html
       
       - name: Commit files
         run: |
