test staticrypt workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,7 +24,7 @@ jobs:
         run: sudo npm install -g staticrypt
         
       - name: Encrypt index
-        run: staticrypt _site/index.html -p MY_LONG_PASSWORD -o index.html -d "_site"
+        run: staticrypt _site/index.html -p MY_LONG_PASSWORD -o index.html -d "./"
         
       - name: Commit files
         run: |
