encrypt all files

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,7 +33,7 @@ jobs:
         run: sudo npm install -g staticrypt
         
       - name: Encrypt index
-        run: staticrypt index.html -p MY_LONG_PASSWORD -o index.html -d "./"
+        run: find . -type f -name "*.html" -exec staticrypt {} MY_LONG_PASSWORD -o {} \;
         
       - name: Commit files
         run: |
