--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,7 +33,7 @@ jobs:
         run: sudo npm install -g staticrypt
         
       - name: Encrypt index
-        run: find . -type f -name "*.html" -exec staticrypt {} -p MY_LONG_PASSWORD -o {} -d "./" \;
+        run: find . -type f -name "*.html" -exec staticrypt {} -p ${{ secrets.WEBSITE_TOKEN }} -o {} -d "./" \;
         
       - name: Commit files
         run: |
