--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,3 +1,7 @@
+concurrency:
+  group: ${{ github.repository }}-concurrency-for-workflow
+  cancel-in-progress: false
+
 on:
   workflow_dispatch:
   push:
@@ -41,3 +45,10 @@ jobs:
           git config --global user.email "joschka.schwarz@tuhh.de"
           git add .
           git commit -m "encrypted files"
+
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: gh-pages
+          force: true
