test concurrency set true

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,6 +1,6 @@
 concurrency:
   group: ${{ github.repository }}-concurrency-for-workflow
-  cancel-in-progress: false
+  cancel-in-progress: true
 
 on:
   workflow_dispatch:
