tow jobs build and deploy, remove download artifact

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -57,10 +57,10 @@ jobs:
       url: ${{steps.deployment.outputs.page_url}}
       
     steps:
-    - uses: actions/download-artifact@master
-      with:
-        name: page
-        path: .
+    #- uses: actions/download-artifact@master
+    #  with:
+    #    name: page
+    #    path: .
     - uses: actions/configure-pages@v1
     - uses: actions/upload-pages-artifact@v1
       with:
