--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -57,13 +57,8 @@ jobs:
       url: ${{steps.deployment.outputs.page_url}}
       
     steps:
-    #- uses: actions/download-artifact@master
-    #  with:
-    #    name: page
-    #    path: .
-    - uses: actions/configure-pages@v1
-    - uses: actions/upload-pages-artifact@v1
-      with:
-        path: .
-    - id: deployment
-      uses: actions/deploy-pages@main
+      - name: Deploy to Github Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./ # or the directory where your HTML files are located
